...
    <string name="chat_status_sending">Sending…</string>
    <string name="chat_status_failed">Not sent</string>
    <string name="chat_error_send">Message could not be sent</string>
    <string name="profile_message">Message</string>
    <string name="notif_mentioned">mentioned you</string>
    <string name="notif_liked_one">%1$s liked your note</string>
    <string name="notif_liked_two">%1$s and %2$s liked your note</string>
    <plurals name="notif_liked_more">
        <item quantity="one">%1$s, %2$s and %3$d other liked your note</item>
        <item quantity="other">%1$s, %2$s and %3$d others liked your note</item>
    </plurals>
    <string name="notif_reposted_one">%1$s reposted your note</string>
    <string name="notif_reposted_two">%1$s and %2$s reposted your note</string>
    <plurals name="notif_reposted_more">
        <item quantity="one">%1$s, %2$s and %3$d other reposted your note</item>
        <item quantity="other">%1$s, %2$s and %3$d others reposted your note</item>
    </plurals>
    <string name="notif_about_reply">Replying to: “%1$s”</string>
    <string name="notif_about_quote">Quoting: “%1$s”</string>
    <string name="notif_tip_profile">to your profile</string>
    <string name="avatar_of">Profile of %1$s</string>
    <string name="notif_note_missing">note not loaded</string>
    <string name="notif_note_withdrawn">deleted note</string>
    <string name="notif_note_loading" translatable="false">…</string>
    <string name="notif_tipped">tipped %1$s XMR</string>
    <string name="notif_channel_name">Monero tips</string>
    <string name="notif_tip_title">Monero tip received</string>
...
